--- a/index.html
+++ b/index.html
@@ -3,110 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Toast libary</title>
+    <script type="module" defer src="./dist/toast.js"></script>
     <link rel="stylesheet" href="./style.css" />
+    <title>Toast libary</title>
   </head>
   <body>
-    <div
-      class="toast__container toast__container-success"
-      data-position="top-right"
-    >
-      <div class="toast__messageBox">
-        <!-- iocn -->
-        <div class="icon__wrapper">
-          <div class="icon__overlay icon__overlay-success"></div>
-          <svg class="icon__picture icon__picture-success">
-            <use xlink:href="image/sprite.svg#icon-check-alt"></use>
-          </svg>
-        </div>
-
-        <!-- message -->
-        <div class="message">
-          <h3 class="title-text">Success</h3>
-          <p class="body-text">Lorem ipsum dolor sit amet elit sit amet eli.</p>
-        </div>
-        <!-- close btn -->
-        <div class="icon__wrapper">
-          <svg class="icon__close">
-            <use xlink:href="image/sprite.svg#icon-cancel-circle"></use>
-          </svg>
-        </div>
-      </div>
-    </div>
-
-    <div class="toast__container toast__container-error">
-      <div class="toast__messageBox">
-        <!-- iocn -->
-        <div class="icon__wrapper">
-          <div class="icon__overlay icon__overlay-error"></div>
-          <svg class="icon__picture icon__picture-error">
-            <use xlink:href="image/sprite.svg#icon-x-altx-alt"></use>
-          </svg>
-        </div>
-
-        <!-- message -->
-        <div class="message">
-          <h3 class="title-text">Error</h3>
-          <p class="body-text">Lorem ipsum dolor sit amet elit sit amet eli.</p>
-        </div>
-        <!-- close btn -->
-        <div class="icon__wrapper">
-          <svg class="icon__close">
-            <use xlink:href="image/sprite.svg#icon-cancel-circle"></use>
-          </svg>
-        </div>
-      </div>
-    </div>
-
-    <div class="toast__container toast__container-info">
-      <div class="toast__messageBox">
-        <!-- iocn -->
-        <div class="icon__wrapper">
-          <div class="icon__overlay icon__overlay-info"></div>
-          <svg class="icon__picture icon__picture-info">
-            <use xlink:href="image/sprite.svg#icon-notification"></use>
-          </svg>
-        </div>
-
-        <!-- message -->
-        <div class="message">
-          <h3 class="title-text">Message</h3>
-          <p class="body-text">Lorem ipsum dolor sit amet elit sit amet eli.</p>
-        </div>
-        <!-- close btn -->
-        <div class="icon__wrapper">
-          <svg class="icon__close">
-            <use xlink:href="image/sprite.svg#icon-cancel-circle"></use>
-          </svg>
-        </div>
-      </div>
-    </div>
-
-    <div
-      class="toast__container toast__container-warning"
-      data-position="top-right"
-    >
-      <div class="toast__messageBox">
-        <!-- iocn -->
-        <div class="icon__wrapper">
-          <div class="icon__overlay icon__overlay-warning"></div>
-          <svg class="icon__picture icon__picture-warning">
-            <use xlink:href="image/sprite.svg#icon-warning"></use>
-          </svg>
-        </div>
-
-        <!-- message -->
-        <div class="message">
-          <h3 class="title-text">Warning</h3>
-          <p class="body-text">Lorem ipsum dolor sit amet elit sit amet eli.</p>
-        </div>
-        <!-- close btn -->
-        <div class="icon__wrapper">
-          <svg class="icon__close">
-            <use xlink:href="image/sprite.svg#icon-cancel-circle"></use>
-          </svg>
-        </div>
-      </div>
-    </div>
+  <button class="toggleBtn">Show Toast</button>
+   <!-- <div class="toast__container" data-position="top-center"></div> -->
   </body>
 </html>
